--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ ol, ul {
   float: left;
   font-size: 24px;
   font-weight: bold;
-  line-height: 34px;
+  line-height: 30px;
   height: 48px;
   margin-right: -1px;
   margin-top: -1px;
@@ -76,4 +76,23 @@ ol, ul {
 
 h3{
   margin-bottom: 5px;
+}
+
+.shape {
+  border: none;
+  border-radius: 25px;
+  color: white;
+  padding: 23px 23px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.Top {
+  background-color: red;
+}
+
+.Bottom {
+  background-color: blue;
 }
